[gd_scene load_steps=6 format=3 uid="uid://dcr1ox6uqifst"]

[ext_resource type="Script" uid="uid://bm5wirtj5twe7" path="res://ui/settings_menu/graphics/graphics_menu.gd" id="1_8u2b0"]
[ext_resource type="PackedScene" uid="uid://dt0fhn02p7ukk" path="res://ui/settings_menu/content_items/content_item_dropdown.tscn" id="2_888lq"]
[ext_resource type="PackedScene" uid="uid://cukdcvp0jsd4j" path="res://ui/settings_menu/content_items/content_item_check_button.tscn" id="3_7gtwp"]
[ext_resource type="PackedScene" uid="uid://6air6r3l5p61" path="res://ui/settings_menu/content_items/content_item_slider.tscn" id="4_vn031"]
[ext_resource type="PackedScene" uid="uid://c61t75veylfqw" path="res://ui/buttons/restore_defaults_button.tscn" id="4_w8gdc"]

[node name="GraphicsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8u2b0")

[node name="VBoxContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
follow_focus = true

[node name="ContentContainer" type="VBoxContainer" parent="VBoxContainer/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="DisplayMode" parent="VBoxContainer/VBoxContainer/ScrollContainer/ContentContainer" instance=ExtResource("2_888lq")]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" parent="VBoxContainer/VBoxContainer/ScrollContainer/ContentContainer/DisplayMode/MarginContainer/HBoxContainer" index="0"]
text = "Display Mode"

[node name="Resolution" parent="VBoxContainer/VBoxContainer/ScrollContainer/ContentContainer" instance=ExtResource("2_888lq")]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" parent="VBoxContainer/VBoxContainer/ScrollContainer/ContentContainer/Resolution/MarginContainer/HBoxContainer" index="0"]
text = "Resolution"

[node name="Borderless" parent="VBoxContainer/VBoxContainer/ScrollContainer/ContentContainer" instance=ExtResource("3_7gtwp")]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" parent="VBoxContainer/VBoxContainer/ScrollContainer/ContentContainer/Borderless/MarginContainer/HBoxContainer" index="0"]
text = "Borderless"

[node name="VSync" parent="VBoxContainer/VBoxContainer/ScrollContainer/ContentContainer" instance=ExtResource("2_888lq")]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" parent="VBoxContainer/VBoxContainer/ScrollContainer/ContentContainer/VSync/MarginContainer/HBoxContainer" index="0"]
text = "V-Sync"

[node name="FPS" parent="VBoxContainer/VBoxContainer/ScrollContainer/ContentContainer" instance=ExtResource("2_888lq")]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" parent="VBoxContainer/VBoxContainer/ScrollContainer/ContentContainer/FPS/MarginContainer/HBoxContainer" index="0"]
text = "FPS"

[node name="MSAA" parent="VBoxContainer/VBoxContainer/ScrollContainer/ContentContainer" instance=ExtResource("2_888lq")]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" parent="VBoxContainer/VBoxContainer/ScrollContainer/ContentContainer/MSAA/MarginContainer/HBoxContainer" index="0"]
text = "MSAA"

[node name="FXAA" parent="VBoxContainer/VBoxContainer/ScrollContainer/ContentContainer" instance=ExtResource("2_888lq")]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" parent="VBoxContainer/VBoxContainer/ScrollContainer/ContentContainer/FXAA/MarginContainer/HBoxContainer" index="0"]
text = "FXAA"

[node name="TAA" parent="VBoxContainer/VBoxContainer/ScrollContainer/ContentContainer" instance=ExtResource("2_888lq")]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" parent="VBoxContainer/VBoxContainer/ScrollContainer/ContentContainer/TAA/MarginContainer/HBoxContainer" index="0"]
text = "TAA"

[node name="RenderScale" parent="VBoxContainer/VBoxContainer/ScrollContainer/ContentContainer" instance=ExtResource("2_888lq")]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" parent="VBoxContainer/VBoxContainer/ScrollContainer/ContentContainer/RenderScale/MarginContainer/HBoxContainer" index="0"]
text = "Render Scale"

[node name="RenderMode" parent="VBoxContainer/VBoxContainer/ScrollContainer/ContentContainer" instance=ExtResource("2_888lq")]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" parent="VBoxContainer/VBoxContainer/ScrollContainer/ContentContainer/RenderMode/MarginContainer/HBoxContainer" index="0"]
text = "Render Mode"

[node name="PostProcessingStrength" parent="VBoxContainer/VBoxContainer/ScrollContainer/ContentContainer" instance=ExtResource("4_vn031")]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" parent="VBoxContainer/VBoxContainer/ScrollContainer/ContentContainer/PostProcessingStrength/MarginContainer/HBoxContainer" index="0"]
text = "Post Processing Strength"

[node name="SliderLabel" parent="VBoxContainer/VBoxContainer/ScrollContainer/ContentContainer/PostProcessingStrength/MarginContainer/HBoxContainer" index="2"]
text = "2"

[node name="HSlider" parent="VBoxContainer/VBoxContainer/ScrollContainer/ContentContainer/PostProcessingStrength/MarginContainer/HBoxContainer" index="3"]
max_value = 4.0
step = 1.0
value = 2.0
tick_count = 5
ticks_on_borders = true

[node name="PreloadShadersMaterials" parent="VBoxContainer/VBoxContainer/ScrollContainer/ContentContainer" instance=ExtResource("3_7gtwp")]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" parent="VBoxContainer/VBoxContainer/ScrollContainer/ContentContainer/PreloadShadersMaterials/MarginContainer/HBoxContainer" index="0"]
text = "Preload Shaders and Materials"

[node name="CheckButton" parent="VBoxContainer/VBoxContainer/ScrollContainer/ContentContainer/PreloadShadersMaterials/MarginContainer/HBoxContainer" index="2"]
button_pressed = true

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 15

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ErrorTextLabel" type="Label" parent="VBoxContainer/VBoxContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 6.0
text = "Et est et quia. Excepturi soluta aut ea. Cumque facere unde voluptatibus. Est quia et ullam. Non incidunt omnis voluptatibus et veniam esse. Libero dolor distinctio esse excepturi molestiae magnam voluptate et."
autowrap_mode = 3

[node name="RestoreDefaultsButton" parent="VBoxContainer/VBoxContainer/MarginContainer/HBoxContainer" instance=ExtResource("4_w8gdc")]
unique_name_in_owner = true
layout_mode = 2

[connection signal="item_selected" from="VBoxContainer/VBoxContainer/ScrollContainer/ContentContainer/DisplayMode/MarginContainer/HBoxContainer/Panel/OptionButton" to="." method="_set_display_mode"]
[connection signal="item_selected" from="VBoxContainer/VBoxContainer/ScrollContainer/ContentContainer/Resolution/MarginContainer/HBoxContainer/Panel/OptionButton" to="." method="_set_resolution"]
[connection signal="toggled" from="VBoxContainer/VBoxContainer/ScrollContainer/ContentContainer/Borderless/MarginContainer/HBoxContainer/CheckButton" to="." method="_set_borderless"]
[connection signal="item_selected" from="VBoxContainer/VBoxContainer/ScrollContainer/ContentContainer/VSync/MarginContainer/HBoxContainer/Panel/OptionButton" to="." method="_set_vsync"]
[connection signal="item_selected" from="VBoxContainer/VBoxContainer/ScrollContainer/ContentContainer/FPS/MarginContainer/HBoxContainer/Panel/OptionButton" to="." method="_set_fps"]
[connection signal="item_selected" from="VBoxContainer/VBoxContainer/ScrollContainer/ContentContainer/MSAA/MarginContainer/HBoxContainer/Panel/OptionButton" to="." method="_set_msaa"]
[connection signal="item_selected" from="VBoxContainer/VBoxContainer/ScrollContainer/ContentContainer/FXAA/MarginContainer/HBoxContainer/Panel/OptionButton" to="." method="_set_fxaa"]
[connection signal="item_selected" from="VBoxContainer/VBoxContainer/ScrollContainer/ContentContainer/TAA/MarginContainer/HBoxContainer/Panel/OptionButton" to="." method="_set_taa"]
[connection signal="item_selected" from="VBoxContainer/VBoxContainer/ScrollContainer/ContentContainer/RenderScale/MarginContainer/HBoxContainer/Panel/OptionButton" to="." method="_set_render_scale"]
[connection signal="item_selected" from="VBoxContainer/VBoxContainer/ScrollContainer/ContentContainer/RenderMode/MarginContainer/HBoxContainer/Panel/OptionButton" to="." method="_set_render_mode"]
[connection signal="slider_value_changed" from="VBoxContainer/VBoxContainer/ScrollContainer/ContentContainer/PostProcessingStrength" to="." method="_on_post_processing_strength_slider_value_changed"]
[connection signal="toggled" from="VBoxContainer/VBoxContainer/ScrollContainer/ContentContainer/PreloadShadersMaterials" to="." method="_set_preload_shaders"]
[connection signal="button_up" from="VBoxContainer/VBoxContainer/MarginContainer/HBoxContainer/RestoreDefaultsButton" to="." method="_on_restore_defaults_button_up"]

[editable path="VBoxContainer/VBoxContainer/ScrollContainer/ContentContainer/DisplayMode"]
[editable path="VBoxContainer/VBoxContainer/ScrollContainer/ContentContainer/Resolution"]
[editable path="VBoxContainer/VBoxContainer/ScrollContainer/ContentContainer/Borderless"]
[editable path="VBoxContainer/VBoxContainer/ScrollContainer/ContentContainer/VSync"]
[editable path="VBoxContainer/VBoxContainer/ScrollContainer/ContentContainer/FPS"]
[editable path="VBoxContainer/VBoxContainer/ScrollContainer/ContentContainer/MSAA"]
[editable path="VBoxContainer/VBoxContainer/ScrollContainer/ContentContainer/FXAA"]
[editable path="VBoxContainer/VBoxContainer/ScrollContainer/ContentContainer/TAA"]
[editable path="VBoxContainer/VBoxContainer/ScrollContainer/ContentContainer/RenderScale"]
[editable path="VBoxContainer/VBoxContainer/ScrollContainer/ContentContainer/RenderMode"]
[editable path="VBoxContainer/VBoxContainer/ScrollContainer/ContentContainer/PostProcessingStrength"]
[editable path="VBoxContainer/VBoxContainer/ScrollContainer/ContentContainer/PreloadShadersMaterials"]
